Closed Bug 585841 Opened 15 years ago Closed 15 years ago

Right click, 'copy link location' no longer works

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b4
Tracking Status
blocking2.0 --- beta4+

People

(Reporter: jimm, Assigned: enndeakin)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

Error in the console: Error: An error occurred executing the cmd_copyLink command: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIController.isCommandEnabled]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://global/content/globalOverlay.js :: goDoCommand :: line 95" data: no] Source File: chrome://global/content/globalOverlay.js Line: 100
Blocks: 383930
Component: General → XUL
Keywords: regression
OS: Windows 7 → All
Product: Firefox → Core
QA Contact: general → xptoolkit.widgets
Hardware: x86 → All
How odd, I must have unintentionally removed the nsDocumentViewer changes from the patches in bug 383930. A patch will be ready soon.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attached patch fix (obsolete) — Splinter Review
Check both popupNode locations
Attachment #464428 - Flags: review?(neil)
blocking2.0: --- → beta4+
Attached patch fix referenceSplinter Review
Bah, didn't seem to save the file before making the patch. This is the right patch.
Attachment #464428 - Attachment is obsolete: true
Attachment #464488 - Flags: review?(neil)
Attachment #464428 - Flags: review?(neil)
Comment on attachment 464488 [details] [diff] [review] fix reference I was wondering about that, but the tree was red when I pulled, and by the time I had got my build working again, you had fixed the patch ;-)
Attachment #464488 - Flags: review?(neil) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b4
Blocks: 593575
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: