Bug 585841 - Right click, 'copy link location' no longer works r=Neil a=blocking2.0 a=sheriff for landing